--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,21 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href="{{ url_for('static', filename='app.css') }}" media="screen" rel="stylesheet" type="text/css">
   {% block head %}{% endblock %}
-  <!--script type="text/javascript" src="//use.typekit.net/ruc1wxc.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script-->
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-  <!--script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-10921494-1']);
-    _gaq.push(['_setDomainName', 'ericwaller.com']);
-    _gaq.push(['_trackPageview']);
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script-->
+    ga('create', 'UA-10921494-3', 'melanieanderic.us');
+    ga('send', 'pageview');
+  </script>
 </head>
 <body>
   {% block content %}{% endblock %}
