Update date and location

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,9 +50,9 @@
     <img src="{{ url_for('static', filename='melanie-and-eric.png') }}">
   </header>
   <section>
-    <div class="date">July 12<sup>th</sup>, 2014</div>
+    <div class="date">July 11<sup>th</sup>, 2014</div>
     <hr>
-    <div class="venue">501 Union</div>
+    <div class="venue">Liberty Warehouse</div>
     <div class="location">Brooklyn, NY</div>
   </section>
 {% endblock %}
