not super happy with "wedding party" yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,11 @@
     height: 80px;
     width: 80px;
   }
+  #wedding-party .role {
+    font-size: 0.675em;
+    text-transform: uppercase;
+    color: #777;
+  }
   #wedding-party li p {
     font-size: 0.75em;
     margin: 0.25em 0;
@@ -122,6 +127,20 @@
   }
   #wedding-party .groomsman .details {
     float: right;
+  }
+  #wedding-party .officiant {
+    margin: 2em auto;
+    width: 460px;
+  }
+  #wedding-party .officiant img {
+    float: left;
+    margin-right: 10px;
+  }
+  #wedding-party .officiant .details {
+    margin: 0 auto;
+    text-align: left;
+    float: left;
+    width: 370px;
   }
 
   @media all and (max-width : 660px) {
@@ -192,6 +211,7 @@
           <img src="http://images.ak.instagram.com/profiles/profile_8044236_75sq_1374935103.jpg">
           <div class="details">
             Allison Schwartz
+            <div class="role">Maid of Honor</div>
             <p>
               Brunch chia kogi Echo Park typewriter squid.
               Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
@@ -200,7 +220,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman bestman">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Dylan Waller
             <p>
@@ -211,7 +231,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Jillian Waller
             <p>
@@ -222,7 +242,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Cameron Breen
             <p>
@@ -233,7 +253,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Nicole Fleisher
             <p>
@@ -244,7 +264,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Chad Burgess
             <p>
@@ -255,7 +275,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Angela Amato
             <p>
@@ -266,7 +286,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Cormack Glass
             <p>
@@ -277,7 +297,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Elizabeth Weiss
             <p>
@@ -288,9 +308,21 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/70x70">
+          <img src="http://placehold.it/80x80">
           <div class="details">
             Nikos Poulikidis
+            <p>
+              Brunch chia kogi Echo Park typewriter squid.
+              Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
+            </p>
+          </div>
+          <div class="clearfix"></div>
+        </li>
+        <li class="officiant">
+          <img src="http://placehold.it/80x80">
+          <div class="details">
+            Richard Ellenson
+            <div class="role">Officiant</div>
             <p>
               Brunch chia kogi Echo Park typewriter squid.
               Shoreditch small batch tofu, locavore Helvetica paleo roof party Pitchfork DIY 8-bit hashtag Schlitz stumptown gentrify bitters.
