--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 {% block content %}
   {{ super() }}
   <style>
-  html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, hr, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { 
-    font-family: 'Montserrat', sans-serif;
+  html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, hr, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+    font-family: "EB Garamond";
     -webkit-font-smoothing: antialiased;
     text-shadow: 0 1px 0 #FFF;
     line-height: 1.5em;
@@ -24,6 +24,7 @@
     margin: 0 auto;
   }
   header .venue {
+    font-family: 'Montserrat', sans-serif;
     color: #222;
     font-size: 1.25em;
     line-height: 1.25em;
@@ -33,6 +34,7 @@
     text-align: center;
   }
   header .location {
+    font-family: 'Montserrat', sans-serif;
     color: #222;
     font-size: 1em;
     line-height: 1.25em;
@@ -47,6 +49,7 @@
     background: #f5f5f5;
   }
   h2 {
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     text-transform: uppercase;
     color: #222;
@@ -166,7 +169,15 @@
     </div>
   </header>
 
-  <section>
+  <section id="welcome">
+    <div class="container">
+      <p>
+        Bicycle rights Carles cray Banksy Pitchfork.
+        Etsy food truck Shoreditch sartorial, brunch retro viral +1 farm-to-table tofu Truffaut wayfarers Schlitz.
+        McSweeney's wayfarers farm-to-table cray 8-bit readymade.
+        Don't forget to RSVP! — M &amp; E
+      </p>
+    </div>
   </section>
 
   <section id="the-reception">
