--- a/templates/index.html
+++ b/templates/index.html
@@ -209,6 +209,9 @@
     section hr {
       margin: 20px auto;
     }
+    #reception .map {
+      width: 320px;
+    }
   }
   </style>
 
@@ -552,6 +555,9 @@
           Directions
         </span>
       </h2>
+      <a href="https://maps.google.com/maps?daddr=Liberty+Warehouse%4040.676821,-74.0179397&t=m&z=14">
+        <img class="map" src="http://maps.googleapis.com/maps/api/staticmap?visual_refresh=true&scale=2&zoom=12&sensor=false&size=640x360&markers=color:blue%7Clabel:S%7C40.676821,-74.0179397">
+      </a>
     </div>
   </section>
 {% endblock %}
