some wedding party pics

--- a/templates/index.html
+++ b/templates/index.html
@@ -426,6 +426,7 @@
           <img src="http://placehold.it/80x80">
           <div class="details">
             Dylan Waller
+            <div class="role">Best man</div>
             <p>
               Squid VHS distillery kale chips, street art synth PBR&amp;B jean shorts tofu single-origin coffee locavore Odd Future twee.
               Pitchfork keytar actually lo-fi iPhone, bitters before they sold out Vice keffiyeh shabby chic sustainable.
@@ -434,7 +435,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/80x80">
+          <img src="http://images.ak.instagram.com/profiles/profile_18368774_75sq_1369026080.jpg">
           <div class="details">
             Jillian Waller
             <p>
@@ -456,7 +457,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/80x80">
+          <img src="http://images.ak.instagram.com/profiles/profile_14318412_75sq_1335113601.jpg">
           <div class="details">
             Nicole Fleisher
             <p>
@@ -478,7 +479,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="bridesmaid">
-          <img src="http://placehold.it/80x80">
+          <img src="http://images.ak.instagram.com/profiles/profile_1364806_75sq_1381150849.jpg">
           <div class="details">
             Angela Amato
             <p>
@@ -489,7 +490,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/80x80">
+          <img src="http://images.ak.instagram.com/profiles/profile_6338560_75sq_1370006683.jpg">
           <div class="details">
             Cormack Glass
             <p>
@@ -511,7 +512,7 @@
           <div class="clearfix"></div>
         </li>
         <li class="groomsman">
-          <img src="http://placehold.it/80x80">
+          <img src="http://images.ak.instagram.com/profiles/profile_223207104_75sq_1361847879.jpg">
           <div class="details">
             Nikos Poulikidis
             <p>
