add registry links, need better destination urls

--- a/templates/index.html
+++ b/templates/index.html
@@ -320,6 +320,9 @@
         <span class="icon"></span>
         Registry
       </h2>
+      <a href="http://www.crateandbarrel.com/"><img style="width: 220px" src="/static/images/crate-and-barrel.png"></a>
+      <hr style="width: 10em; margin: 3em auto">
+      <a href="http://www.williams-sonoma.com/"><img style="width: 320px" src="/static/images/williams-sonoma.png"></a>
     </div>
   </section>
 
